--- a/app/src/main/res/layout/fragment_video_player.xml
+++ b/app/src/main/res/layout/fragment_video_player.xml
@@ -18,14 +18,10 @@
             android:layout_height="match_parent"
             android:background="@color/black">
 
-            <com.google.android.exoplayer2.ui.PlayerView
-                android:id="@+id/player_view"
+            <SurfaceView
+                android:id="@+id/surface_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:fastforward_increment="10000"
-                app:rewind_increment="10000"
-                app:use_controller="true" />
-
+                android:layout_height="match_parent" />
         </FrameLayout>
 
         <FrameLayout
