--- a/app/src/main/res/layout/fragment_video_player.xml
+++ b/app/src/main/res/layout/fragment_video_player.xml
@@ -10,6 +10,9 @@
         android:layout_height="match_parent"
         app:bottom_view_id="@+id/bottom_layout"
         app:top_view_id="@+id/top_layout"
+        app:top_view_margin_bottom="10dp"
+        app:top_view_margin_left="10dp"
+        app:top_view_margin_right="10dp"
         app:window_margin="120dp">
 
         <FrameLayout
