--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="draggable_layout">
-        <attr name="top_view_id" />
-        <attr name="bottom_view_id" />
+        <attr name="top_view_id" format="reference" />
+        <attr name="bottom_view_id" format="reference" />
+        <attr name="top_view_margin_right" format="dimension" />
+        <attr name="top_view_margin_bottom" format="dimension" />
+        <attr name="top_view_margin_left" format="dimension" />
         <attr name="window_margin" format="dimension" />
     </declare-styleable>
 
