비디오 상단 control view 작업전 전처리

--- a/app/src/main/res/layout/fragment_video_player.xml
+++ b/app/src/main/res/layout/fragment_video_player.xml
@@ -25,6 +25,11 @@
                 android:id="@+id/surface_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
+
+            <com.eq.jh.earthquakeplayer2.custom.VideoPlayerControlView
+                android:id="@+id/control_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
         </FrameLayout>
 
         <FrameLayout
