--- a/app/src/main/res/layout/fragment_video_player.xml
+++ b/app/src/main/res/layout/fragment_video_player.xml
@@ -8,6 +8,7 @@
         android:id="@+id/draggable_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:splitMotionEvents="false"
         app:bottom_view_id="@+id/bottom_layout"
         app:top_view_id="@+id/top_layout"
         app:top_view_margin_bottom="10dp"
@@ -19,7 +20,8 @@
             android:id="@+id/top_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/black">
+            android:background="@color/black"
+            android:splitMotionEvents="false">
 
             <SurfaceView
                 android:id="@+id/surface_view"
