--- a/app/src/main/res/layout/video_player_control_view.xml
+++ b/app/src/main/res/layout/video_player_control_view.xml
@@ -9,6 +9,5 @@
         android:id="@+id/play_pause_iv"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_centerInParent="true"
-        android:src="@drawable/btn_play" />
+        android:layout_centerInParent="true" />
 </RelativeLayout>
