--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="black_90">#e6000000</color>
 
     <color name="white">#ffffff</color>
+    <color name="white_50">#80ffffff</color>
 </resources>
