미니뷰에 플레이버튼 close버튼 추가 click이벤트 추가함(~완료)

--- a/app/src/main/res/layout/fragment_drag_test.xml
+++ b/app/src/main/res/layout/fragment_drag_test.xml
@@ -4,12 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.eq.jh.earthquakeplayer2.custom.DraggableLayout
+   <com.eq.jh.earthquakeplayer2.custom.DraggableLayout
         android:id="@+id/draggable_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:bottom_view_id="@+id/bottom_layout"
-        app:top_view_id="@+id/top_layout"
+        app:info_view_id="@+id/bottom_layout"
+        app:player_view_id="@+id/top_layout"
         app:window_margin="120dp">
 
         <FrameLayout
