--- a/app/src/main/res/layout/fragment_video_player.xml
+++ b/app/src/main/res/layout/fragment_video_player.xml
@@ -9,26 +9,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:splitMotionEvents="false"
-        app:bottom_view_id="@+id/bottom_layout"
+        app:info_view_id="@+id/bottom_layout"
         app:minimized_height="@dimen/video_minimized_height"
-        app:top_view_id="@+id/top_layout"
-        app:top_view_margin_bottom="10dp"
-        app:top_view_margin_left="@dimen/video_top_view_margin_left"
-        app:top_view_margin_right="@dimen/video_top_view_margin_right"
+        app:player_view_id="@+id/top_layout"
+        app:player_view_margin_bottom="10dp"
+        app:player_view_margin_left="@dimen/video_top_view_margin_left"
+        app:player_view_margin_right="@dimen/video_top_view_margin_right"
         app:window_margin="120dp">
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/top_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:splitMotionEvents="false">
 
             <FrameLayout
-                android:id="@+id/video_view"
+                android:id="@+id/player_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/black"
-                android:splitMotionEvents="false">
+                android:background="@color/black">
 
                 <SurfaceView
                     android:id="@+id/surface_view"
@@ -41,33 +40,17 @@
                     android:layout_height="match_parent" />
             </FrameLayout>
 
-            <RelativeLayout
-                android:id="@+id/video_mini_control_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/white">
-
-                <ImageView
-                    android:id="@+id/close_iv"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="60dp"
-                    android:src="@drawable/close"
-                    android:background="#f0f"/>
-
-                <ImageView
-                    android:id="@+id/small_play_pause_iv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="70dp"
-                    android:layout_toLeftOf="@+id/close_iv"
-                    android:src="@drawable/btn_pause"
-                    android:background="#ff0"/>
-            </RelativeLayout>
-        </LinearLayout>
+            <ImageView
+                android:id="@+id/close_iv"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:background="#f0f"
+                android:src="@drawable/close"
+                android:visibility="invisible" />
+        </RelativeLayout>
 
         <FrameLayout
             android:id="@+id/bottom_layout"
@@ -81,7 +64,6 @@
                 android:background="@color/bg"
                 android:overScrollMode="never"
                 android:scrollbars="vertical" />
-
         </FrameLayout>
     </com.eq.jh.earthquakeplayer2.custom.DraggableLayout>
 </FrameLayout>
