--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="draggable_layout">
-        <attr name="top_view_id" format="reference" />
-        <attr name="bottom_view_id" format="reference" />
-        <attr name="top_view_margin_right" format="dimension" />
-        <attr name="top_view_margin_bottom" format="dimension" />
-        <attr name="top_view_margin_left" format="dimension" />
+    <declare-styleable name="draggable_view">
+        <attr name="player_view_id" format="reference" />
+        <attr name="info_view_id" format="reference" />
+        <attr name="player_view_margin_left" format="dimension" />
+        <attr name="player_view_margin_right" format="dimension" />
+        <attr name="player_view_margin_bottom" format="dimension" />
         <attr name="minimized_height" format="dimension" />
         <attr name="window_margin" format="dimension" />
     </declare-styleable>
-
 </resources>
