1. 화면이 작아졌을때 click처리 2. max상태에서 seekbar 처리 부드럽게 3. 터치시 민감도 조정 (위 아래 이동시 건드리기만 해도 움직이는것 보완)

--- a/app/src/main/res/layout/fragment_video_player.xml
+++ b/app/src/main/res/layout/fragment_video_player.xml
@@ -37,16 +37,17 @@
                 <com.eq.jh.earthquakeplayer2.custom.VideoPlayerControlView
                     android:id="@+id/control_view"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:visibility="invisible" />
             </FrameLayout>
 
             <ImageView
                 android:id="@+id/close_iv"
                 android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_height="@dimen/close_button_height"
                 android:layout_alignParentRight="true"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginTop="@dimen/close_button_margin_top"
+                android:layout_marginRight="@dimen/close_button_margin_right"
                 android:background="#f0f"
                 android:src="@drawable/close"
                 android:visibility="invisible" />
