--- a/app/src/main/res/layout/video_player_control_view.xml
+++ b/app/src/main/res/layout/video_player_control_view.xml
@@ -10,4 +10,13 @@
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_centerInParent="true" />
+
+    <SeekBar
+        android:id="@+id/seek_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="5dp" />
 </RelativeLayout>
