--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,9 @@
 <resources>
+    <dimen name="video_default_minimized_height">65dp</dimen>
     <dimen name="video_minimized_height">100dp</dimen>
     <dimen name="video_top_view_margin_left">10dp</dimen>
     <dimen name="video_top_view_margin_right">10dp</dimen>
+    <dimen name="close_button_margin_right">10dp</dimen>
+    <dimen name="close_button_margin_top">10dp</dimen>
+    <dimen name="close_button_height">50dp</dimen>
 </resources>
