--- a/app/src/main/res/layout/song_player_control_view.xml
+++ b/app/src/main/res/layout/song_player_control_view.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="70dp"
     android:orientation="horizontal">
 
     <FrameLayout
@@ -17,8 +17,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@drawable/previous"
-            android:duplicateParentState="true" />
+            android:duplicateParentState="true"
+            android:src="@drawable/previous" />
     </FrameLayout>
 
     <FrameLayout
@@ -26,15 +26,16 @@
         android:layout_width="0dp"
         android:layout_height="70dp"
         android:layout_weight="1"
-        android:background="@drawable/selector_player_controller">
+        android:background="@drawable/selector_player_controller"
+        android:visibility="invisible">
 
         <ImageView
             android:id="@+id/rewind_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@drawable/rewind"
-            android:duplicateParentState="true" />
+            android:duplicateParentState="true"
+            android:src="@drawable/rewind" />
     </FrameLayout>
 
     <FrameLayout
@@ -49,8 +50,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@drawable/play"
-            android:duplicateParentState="true" />
+            android:duplicateParentState="true"
+            android:src="@drawable/play" />
     </FrameLayout>
 
     <FrameLayout
@@ -58,15 +59,16 @@
         android:layout_width="0dp"
         android:layout_height="70dp"
         android:layout_weight="1"
-        android:background="@drawable/selector_player_controller">
+        android:background="@drawable/selector_player_controller"
+        android:visibility="invisible">
 
         <ImageView
             android:id="@+id/ff_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@drawable/fastforward"
-            android:duplicateParentState="true" />
+            android:duplicateParentState="true"
+            android:src="@drawable/fastforward" />
     </FrameLayout>
 
     <FrameLayout
@@ -81,7 +83,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@drawable/next"
-            android:duplicateParentState="true" />
+            android:duplicateParentState="true"
+            android:src="@drawable/next" />
     </FrameLayout>
 </LinearLayout>
